--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,8 +59,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - lib/images/Fitser_Logo.png
+    - lib/images/G_logo.png
+    - lib/images/X_logo.png
+    - lib/images/E_logo.png
+    - lib/images/F_logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
