--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   cloud_firestore: ^4.13.2
   firebase_app_check: ^0.2.1+5
   cloud_functions: ^4.5.5
+  easy_stepper: ^0.8.2
+  cupertino_stepper: ^0.2.1
+  hexcolor: ^3.0.1
 
 dev_dependencies:
   flutter_test:
