--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ app.*.map.json
 #firebase configuration
 lib/firebase_options.dart
 lib/firebase_options.dart
+lib/screens/auth_demo.dart
+lib/screens/main_demo.dart
