--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,6 @@ lib/firebase_options.dart
 lib/firebase_options.dart
 lib/screens/auth_demo.dart
 lib/screens/main_demo.dart
+lib/services/service_testing.dart
+lib/services/demo.dart
+lib/data/json_mockups.json
