--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   easy_stepper: ^0.8.2
   cupertino_stepper: ^0.2.1
   hexcolor: ^3.0.1
+  universal_io: ^2.2.2
 
 dev_dependencies:
   flutter_test:
