--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cupertino_stepper: ^0.2.1
   hexcolor: ^3.0.1
   universal_io: ^2.2.2
+  async_builder: ^1.3.1+1
 
 dev_dependencies:
   flutter_test:
