--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,15 @@ dependencies:
   cloud_firestore: ^4.13.2
   firebase_app_check: ^0.2.1+5
   cloud_functions: ^4.5.5
-  easy_stepper: ^0.8.2
-  cupertino_stepper: ^0.2.1
   hexcolor: ^3.0.1
   universal_io: ^2.2.2
   async_builder: ^1.3.1+1
+  flutter_heatmap_calendar: ^1.0.5
+  gap: ^3.0.1
+  circular_profile_avatar: ^2.0.5
+  widget_circular_animator: ^1.0.0
+  d_chart: ^2.6.3
+  animated_snack_bar: ^0.4.0
 
 dev_dependencies:
   flutter_test:
