--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,29 +75,36 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/images/G_logo.png
-    - lib/images/X_logo.png
-    - lib/images/E_logo.png
-    - lib/images/F_logo.png
-    - lib/images/FL_logo.png
-    - lib/images/BS_logo.png
-    - lib/images/C_logo.png
-    - lib/images/R_Person.jpg
-    - lib/images/Pull_Person.png
-    - lib/images/Legs_Person.png
-    - lib/images/fitster-icon.png
-    - lib/images/bro_split.png
-    - lib/images/ExerciseCardImages/exercise_1.png
-    - lib/images/ExerciseCardImages/exercise_2.png
-    - lib/images/ExerciseCardImages/exercise_3.png
-    - lib/images/ExerciseCardImages/exercise_4.png
-    - lib/images/ExerciseCardImages/exercise_5.png
-    - lib/images/ExerciseCardImages/exercise_6.png
-    - lib/images/ExerciseCardImages/exercise_7.png
-    - lib/images/ExerciseCardImages/exercise_8.png
-    - lib/images/ExerciseCardImages/exercise_9.png
-    - lib/images/ExerciseCardImages/exercise_10.png
-  #   - images/a_dot_ham.jpeg
+    # - lib/images/G_logo.png
+    # - lib/images/X_logo.png
+    # - lib/images/E_logo.png
+    # - lib/images/F_logo.png
+    # - lib/images/FL_logo.png
+    # - lib/images/BS_logo.png
+    # - lib/images/C_logo.png
+    # - lib/images/R_Person.jpg
+    # - lib/images/Pull_Person.png
+    # - lib/images/Legs_Person.png
+    # - lib/images/fitster-icon.png
+    # - images/fitster-icon.png
+    # - lib/images/bro_split.png
+    # - lib/images/ExerciseCardImages/exercise_1.png
+    # - lib/images/ExerciseCardImages/exercise_2.png
+    # - lib/images/ExerciseCardImages/exercise_3.png
+    # - lib/images/ExerciseCardImages/exercise_4.png
+    # - lib/images/ExerciseCardImages/exercise_5.png
+    # - lib/images/ExerciseCardImages/exercise_6.png
+    # - lib/images/ExerciseCardImages/exercise_7.png
+    # - lib/images/ExerciseCardImages/exercise_8.png
+    # - lib/images/ExerciseCardImages/exercise_9.png
+    # - lib/images/ExerciseCardImages/exercise_10.png
+    # - images/lake.jpg
+    # - assets/
+    - assets/images/
+    - assets/ExerciseCardImages/
+    - assets/muscle_groups/
+    # - images/
+    # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
